minor alignment fix on index main window

--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,8 @@
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
   background-color: #282828;
 }
@@ -148,6 +153,7 @@ body {
   }
 
   .window {
+    margin-right: 20px;
     padding: inherit;
     border-radius: 8px;
     background-color: gray;
@@ -157,7 +163,6 @@ body {
   }
 
   .mainwindow {
-    margin-left: 20px;
     padding: 40px 32px 40px 40px;
     border-radius: inherit;
     order: 1;
